--- a/.env.dev
+++ b/.env.dev
@@ -5,5 +5,5 @@ SQL_ENGINE=mysql.connector.django
 SQL_DATABASE=smartcare
 SQL_USER=smartcare
 SQL_PASSWORD=smartcare
-SQL_HOST=db
+SQL_HOST=smartcare-db
 SQL_PORT=8080
