--- a/smartcare_svelte/Dockerfile
+++ b/smartcare_svelte/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /smartcare_svelte
 COPY package.json package-lock.json ./
 RUN npm install
 
-COPY . .
-RUN npm run build
+# COPY . .
+# RUN npm run build
 
-EXPOSE 3000
-CMD ["node", "build"]
+# EXPOSE 3000
+# CMD ["node", "build"]
