--- a/smartcare_django/.env.dev
+++ b/smartcare_django/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=foo
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 web-rest [::1]
 SQL_ENGINE=mysql.connector.django
 SQL_DATABASE=smartcare
 SQL_USER=smartcare
