--- a/smartcare_svelte/package.json
+++ b/smartcare_svelte/package.json
@@ -23,5 +23,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"yup": "^1.3.3",
+		"yup-password": "^0.3.0"
+	}
 }
