--- a/smartcare_svelte/package.json
+++ b/smartcare_svelte/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@fullcalendar/core": "^6.1.11",
 		"@fullcalendar/daygrid": "^6.1.11",
+		"@fullcalendar/interaction": "^6.1.11",
 		"svelte-fullcalendar": "^3.0.0",
 		"svelte-idle": "^2.0.3",
 		"yup": "^1.3.3",
