--- a/smartcare_django/.env.dev
+++ b/smartcare_django/.env.dev
@@ -7,3 +7,7 @@ SQL_USER=smartcare
 SQL_PASSWORD=smartcare
 SQL_HOST=smartcare-db
 SQL_PORT=8080
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_HOST_USER=1860e4df3122e6
+EMAIL_HOST_PASSWORD=6c9f34e603f943
+EMAIL_PORT=2525
